add new db table and new modle

--- a/StackOverflow/StackOverflow.csproj
+++ b/StackOverflow/StackOverflow.csproj
@@ -138,6 +138,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Question.cs">
+      <DependentUpon>UserModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="User.cs">
       <DependentUpon>UserModel.tt</DependentUpon>
     </Compile>
