add new function

--- a/StackOverflow/StackOverflow.csproj
+++ b/StackOverflow/StackOverflow.csproj
@@ -182,6 +182,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Question\List.cshtml" />
     <Content Include="Views\Question\Index.cshtml" />
+    <Content Include="Views\Question\UserQuestion.cshtml" />
+    <Content Include="Views\Question\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
